--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ new popoDateTime('.js-datetime',{
    //scroll
     var box = document.querySelector('.phone-box');
     document.addEventListener('scroll',function(){
+        var st = document.documentElement.scrollTop;
         if(st>390){
             box.className='phone-box fixed';
         }else{
