--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ new popoDateTime('.js-datetime',{
 
             ]
         }],
-        background:'light'
+        background:'dark'
     });
 
     //Date
