--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ new popoDateTime('.js-datetime',{
 </div>
 
 
-<script src="dist/bundle.js"></script>
+<script src="js/popoPicker.js"></script>
 <script src="js/prism.js"></script>
 <script>
     //Picker
