--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                    <div class="tit">Picker</div>
                    <input class="inp js-picker" placeholder="请选择选项">
                    <div class="tit">Date</div>
-                   <input class="inp js-date" placeholder="请选择日期">
+                   <input class="inp js-date" placeholder="请选择日期" value=2019-06-06>
                    <div class="tit">Time</div>
                    <input class="inp js-time" placeholder="请选择时间">
                    <div class="tit">DateTime</div>
